# scalf

./: .gitignore  Cargo.toml  README.md  release_validation.scl
docs/: language_spec.md  release_notes_v0.2.1.md  stdlib_reference.md
examples/: file_processor.rask  file_processor.scl  hello.rask  hello.scl  http_client.rask  http_client.scl  url_import.scl
examples/advanced/: backup.scl  tasklist.scl  weather.scl
plans/: plan.md
sculk/: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md
sculk/benches/: compilation.rs
sculk/examples/: hello_native.scl
sculk/src/: lib.rs  main.rs
sculk/src/backend/: cranelift.rs  mod.rs  qbe.rs  x86_64.rs
sculk/src/codegen/: lowering.rs  mod.rs
sculk/src/frontend/: mod.rs
sculk/src/ir/: builder.rs  mod.rs  printer.rs
sculk/src/optimize/: mod.rs
sculk/tests/: compile_tests.rs
src/: lib.rs  main.rs
src/docgen/: mod.rs
src/errors/: mod.rs  pretty.rs
src/formatter/: mod.rs
src/lexer/: mod.rs  token.rs
src/lint/: mod.rs
src/parser/: ast.rs  expr.rs  mod.rs
src/repl/: highlighter.rs  mod.rs
src/runtime/: builtins.rs  mod.rs  value.rs
src/stdlib/: concurrency.rs  fs.rs  http.rs  json.rs  math.rs  mod.rs
src/typechecker/: mod.rs  types.rs
src/vm/: mod.rs
stdlib/std/: concurrency.rask  crypto.scl  env.scl  fs.rask  fs.scl  http.rask  http.scl  json.rask  json.scl  math.rask  math.scl  path.scl  time.scl
tests/: formatter_tests.rs  lexer_tests.rs  lint_tests.rs  parser_tests.rs  repl_tests.rs  runtime_tests.rs  typechecker_tests.rs  vm_tests.rs
tests/integration/: basic.rask  types.rask
