[package]
name = "scalf"
version = "0.2.1"
edition = "2021"
description = "SCALF - A scripting language with zero dependency hell"
license = "MIT"

[dependencies]
serde_json = { version = "1.0", optional = true }
unicode-segmentation = "1.11"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = { version = "0.10", optional = true }
rustyline = "14.0"

[features]
default = ["net", "json", "crypto"]
net = ["dep:reqwest", "json", "crypto"]
json = ["dep:serde_json"]
crypto = ["dep:sha2"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
