[package]
name = "sculk"
version = "0.2.0"
edition = "2021"
description = "Native code generation backend for SCALF (EXPERIMENTAL)"
license = "MIT"
authors = ["MINTILER-DEV"]

[lib]
name = "sculk"
path = "src/lib.rs"

[dependencies]
# Reuse main SCALF frontend for lexing/parsing
scalf = { path = ".." }

# Cranelift - Production-ready codegen backend
cranelift = { version = "0.115", optional = true }
cranelift-module = { version = "0.115", optional = true }
cranelift-jit = { version = "0.115", optional = true }
cranelift-object = { version = "0.115", optional = true }
cranelift-native = { version = "0.115", optional = true }

# Object file generation
target-lexicon = "0.12"
object = { version = "0.36", optional = true }

# For IR printing/debugging
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["cranelift-backend"]

# Backend implementations
cranelift-backend = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-object",
    "dep:cranelift-native",
    "dep:object"
]

# Future backends
qbe-backend = []
custom-backend = []

# Development features
debug-ir = ["dep:serde"]

[[bench]]
name = "compilation"
harness = false

